# Malzahar

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
Malzahar/: CMakeLists.txt  Malzahar.cpp  Malzahar.h  app_icon.rc
